--- a/src/components/header/Search.css
+++ b/src/components/header/Search.css
@@ -43,3 +43,15 @@
 	background-color: var(--gpr-search-input-bg-color-active);
 	border: 1px solid var(--gpr-search-border-color-active);
 }
+
+.gpr-powered-by {
+	display: flex;
+	justify-content: center;
+	padding: 4px 0;
+}
+
+.gpr-powered-by img {
+	height: 16px;
+	width: auto;
+	opacity: 0.7;
+}
